@@ -5,6 +5,10 @@ Fixed Notice: Use of undefined constant port_type - assumed 'port_type' in admin
 Fixed Notice: Use of undefined constant name - assumed 'name' in admin.php
 Fixed some cleanups of '?' to ? (cannot have single quotes around ?)
 Fixed Notice:  Undefined variable: totalmines in check_mines.php
+Fixed Notice: Use of undefined constant name - assumed 'name' in igb.php
+Fixed Notice: Use of undefined constant ship_id - assumed 'ship_id' in igb.php
+Fixed Notice: Use of undefined constant turns_used - assumed 'turns_used' in igb.php
+Fixed Notice: Use of undefined constant balance - assumed 'balance' in igb.php
 
 TheMightyDude (22 July 2012)
 --------------------------------------
